# stremlit

./: .gitignore  LICENSE  README.md  app.py  gdp_2025.ipynb  pyproject.toml  requirements.txt
analz/soc_econ/: nsf.py  testplots.py  wv_data_2025_utils.py  wv_data_utils.py  wv_employee_data.py  wvclcs.py
analz/soc_econ/.ipynb_checkpoints/: wv_data_utils-checkpoint.py
analz/utils/: GDPTree.py  WV2022_graphs.py  audio_utils.py  curl_util.py  dpatterns.py  forms.py  gdp_linked_list.py  lambdas.py  line-charts.py  medium_utils.py  notebook_utils.py  nsf.py  podbeanapi.py  pyarrow_utils.py  shelly.txt  shep_poets_emails.py  sorts.py  trees.py  webtests.py  wv_data_2025_utils.py  wv_data_utils.py  wv_employee_data.py  yt.py
analz/utils/NAT_gdp/: pa_gdp.py
analz/utils/dash/: dash2.py
json/: clc_presidents.json  descriptions.json  gdp_2022_charts.json  gdp_emp_desc_index_concordance.txt  short_desc.txt
