[project]
name = "strmlit"
version = "0.1.0"
description = "streamlit test"
authors = [
    {name = "“[John",email = "[jcase4218@gmail.com]"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.2,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
